--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "express": "^4.18.2",
     "mongoose": "^7.0.2",
     "multer": "^1.4.5-lts.1",
-    "nanoid": "^4.0.1"
+    "nanoid": "^4.0.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.21.0",
