--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.35.0",
     "cors": "^2.8.5",
@@ -21,6 +22,9 @@
     "mongoose": "^7.0.2",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^4.0.1",
+    "node": "^19.8.1",
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -30,7 +34,7 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
-    "nodemon": "^2.0.21",
+    "nodemon": "^2.0.22",
     "rimraf": "^4.4.0"
   }
 }
