--- a/backend/src/geoapp/package.json
+++ b/backend/src/geoapp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "front-end",
+  "name": "geoapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,15 +7,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
-    "bootstrap": "^5.2.3",
-    "link-react": "^3.0.0",
-    "navigator": "^1.0.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
-    "react-toastify": "^9.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwind": "^4.0.0"
   }
 }
